--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "compile": "npm run clean && tsc",
     "clean": "rm -rf dist coverage",
-		"lint": "eslint ./src/**/*.ts",
-		"pretest": "npm run lint",
+    "lint": "eslint ./src/**/*.ts",
+    "pretest": "npm run lint",
     "test": "jest"
   },
   "keywords": [],
@@ -20,10 +20,11 @@
   "devDependencies": {
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.7",
+    "@types/node": "^12.7.8",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "eslint": "^6.4.0",
+    "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
