Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "pretest": "npm run lint",
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+		"duplicates",
+		"strings",
+		"duplication",
+		"scan",
+		"find",
+		"squash",
+		"squasher"
+	],
   "author": "Erwin Heitzman",
   "license": "MIT",
   "dependencies": {
