--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,18 @@
 {
 	"compilerOptions": {
-		"resolveJsonModule": true,
-		"target": "es5",
-		"module": "commonjs",
-		"outDir": "./dist",
-		"removeComments": true,
-		"strict": true,
-		"types": [
-			"node",
-			"jest"
-		],
-		"esModuleInterop": true
+	  "target": "es6",
+	  "module": "commonjs",
+	  "outDir": "lib/",
+	  "declaration": true,
+	  "strict": true,
+	  "esModuleInterop": true,
+	  "resolveJsonModule": true,
+	  "forceConsistentCasingInFileNames": true,
+	  "types": ["node", "jest"]
 	},
 	"include": ["src"],
 	"exclude": [
-		"node_modules",
-		"**/*.test.ts"
+	  "node_modules",
+	  "**/*.spec.ts"
 	]
 }
