fix package references

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Erwin Heitzman",
   "homepage": "https://github.com/erwinheitzman/find-duplicate-strings/blob/master/README.md",
   "license": "MIT",
-  "main": "cli/index.js",
-  "types": "cli/index.d.ts",
-  "bin": "cli/index.js",
+  "main": "lib/cli/index.js",
+  "types": "lib/cli/index.d.ts",
+  "bin": "lib/cli/index.js",
   "files": [
     "/lib"
   ],
