--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
-	"compilerOptions": {
-	  "target": "es6",
-	  "module": "commonjs",
-	  "outDir": "lib/",
-	  "declaration": true,
-	  "strict": true,
-	  "esModuleInterop": true,
-	  "resolveJsonModule": true,
-	  "forceConsistentCasingInFileNames": true,
-	  "types": ["node", "jest"]
-	},
-	"include": ["src"],
-	"exclude": [
-	  "node_modules",
-	  "**/*.spec.ts"
-	]
+  "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "outDir": "lib/",
+    "allowJs": true,
+    "declaration": true,
+    "strict": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node", "jest"]
+  },
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
