--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["node", "jest"]
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "exclude": [
-    "node_modules",
     "**/*.spec.ts"
   ]
 }
