--- a/package.json
+++ b/package.json
@@ -1,67 +1,64 @@
 {
-  "name": "find-duplicate-strings",
-  "version": "2.1.0",
-  "description": "Easy to use CLI that finds duplicate strings in a directory and stores them in a external file for easy reference",
-  "author": "Erwin Heitzman",
-  "homepage": "https://github.com/erwinheitzman/find-duplicate-strings/blob/master/README.md",
-  "license": "MIT",
-  "main": "lib/cli/index.js",
-  "types": "lib/cli/index.d.ts",
-  "bin": "lib/cli/index.js",
-  "files": [
-    "/lib"
-  ],
-  "scripts": {
-    "prepare": "rm -rf lib coverage && tsc --newLine lf",
-    "lint": "eslint ./src/**/*.ts --fix",
-    "pretest": "npm run lint",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/erwinheitzman/find-duplicate-strings.git"
-  },
-  "keywords": [
-    "duplicate",
-    "duplicates",
-    "strings",
-    "duplication",
-    "scan",
-    "find",
-    "find-duplicate-strings"
-  ],
-  "bugs": {
-    "url": "https://github.com/erwinheitzman/find-duplicate-strings/issues"
-  },
-  "dependencies": {
-    "commander": "^6.2.0",
-    "inquirer": "^7.3.3"
-  },
-  "devDependencies": {
-    "@types/inquirer": "^7.3.1",
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.2",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "pre-push": "npm t"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint --fix"
-    ]
-  }
+	"name": "find-duplicate-strings",
+	"version": "2.1.1",
+	"description": "Easy to use CLI that finds duplicate strings in a directory and stores them in a external file for easy reference",
+	"author": "Erwin Heitzman",
+	"homepage": "https://github.com/erwinheitzman/find-duplicate-strings/blob/master/README.md",
+	"license": "MIT",
+	"main": "lib/cli/index.js",
+	"types": "lib/cli/index.d.ts",
+	"bin": "lib/cli/index.js",
+	"files": [
+		"/lib"
+	],
+	"scripts": {
+		"prepare": "husky install",
+		"prepublishOnly": "tsc",
+		"test": "jest"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/erwinheitzman/find-duplicate-strings.git"
+	},
+	"keywords": [
+		"duplicate",
+		"duplicates",
+		"strings",
+		"duplication",
+		"scan",
+		"find",
+		"find-duplicate-strings",
+		"search"
+	],
+	"bugs": {
+		"url": "https://github.com/erwinheitzman/find-duplicate-strings/issues"
+	},
+	"dependencies": {
+		"commander": "^8.2.0",
+		"inquirer": "^8.2.0"
+	},
+	"devDependencies": {
+		"@tsconfig/recommended": "^1.0.1",
+		"@types/inquirer": "^8.1.3",
+		"@types/jest": "^27.0.2",
+		"@types/node": "^16.11.0",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "^8.3.0",
+		"husky": "^7.0.2",
+		"jest": "^27.2.5",
+		"lint-staged": "^11.2.3",
+		"prettier": "^2.4.1",
+		"ts-jest": "^27.0.7",
+		"typescript": "^4.4.4"
+	},
+	"lint-staged": {
+		"**/*.{js,ts}": [
+			"eslint --fix"
+		],
+		"**/*.{yml,json,md,ts,js}": [
+			"prettier --write"
+		]
+	}
 }
