--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "outDir": "lib/",
-    "allowJs": true,
-    "declaration": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "**/*.spec.ts"
-  ]
+	"extends": "@tsconfig/recommended/tsconfig.json",
+	"compilerOptions": {
+		"outDir": "lib/",
+		"allowJs": true,
+		"declaration": true,
+		"resolveJsonModule": true
+	},
+	"include": ["src"],
+	"exclude": ["**/*.spec.ts"]
 }
