--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -14,16 +14,14 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     env:
       OS: ${{ matrix.os }}
-      NODE: '12.x'
+      NODE: '14.x'
     steps:
       - uses: actions/checkout@master
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-      - name: Generate coverage report
+          node-version: 14.x
+      - name: Run tests
         run: |
           npm ci
-          npm test -- --coverage
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@master
+          npm test
