--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -12,16 +12,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        node: ['12', '14', '16']
     env:
       OS: ${{ matrix.os }}
-      NODE: '14.x'
+      NODE: '${{ matrix.node }}'
     steps:
-      - uses: actions/checkout@master
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node }}
+          cache: 'npm'
       - name: Run tests
-        run: |
-          npm ci
+        run: npm ci
           npm test
