--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"/lib"
 	],
 	"scripts": {
-		"prepare": "husky install",
+		"prepare": "husky || true",
 		"prepublishOnly": "tsc",
 		"test": "jest"
 	},
@@ -34,24 +34,23 @@
 		"url": "https://github.com/erwinheitzman/find-duplicate-strings/issues"
 	},
 	"dependencies": {
-		"commander": "^8.3.0",
-		"inquirer": "^8.2.0"
+		"@inquirer/prompts": "^7.0.0",
+		"commander": "^12.1.0"
 	},
 	"devDependencies": {
-		"@tsconfig/recommended": "^1.0.1",
-		"@types/inquirer": "^8.1.3",
-		"@types/jest": "^27.0.3",
-		"@types/node": "^16.11.10",
-		"@typescript-eslint/eslint-plugin": "^5.4.0",
-		"@typescript-eslint/parser": "^5.4.0",
-		"eslint": "^8.3.0",
-		"eslint-config-prettier": "^8.3.0",
-		"husky": "^7.0.4",
-		"jest": "^27.3.1",
-		"lint-staged": "^12.1.2",
-		"prettier": "^2.4.1",
-		"ts-jest": "^27.0.7",
-		"typescript": "^4.5.2"
+		"@eslint/js": "^9.12.0",
+		"@tsconfig/recommended": "^1.0.7",
+		"@types/eslint__js": "^8.42.3",
+		"@types/jest": "^29.5.13",
+		"eslint": "^9.12.0",
+		"eslint-config-prettier": "^9.1.0",
+		"husky": "^9.1.6",
+		"jest": "^29.7.0",
+		"lint-staged": "^15.2.10",
+		"prettier": "^3.3.3",
+		"ts-jest": "^29.2.5",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.10.0"
 	},
 	"lint-staged": {
 		"**/*.{js,ts}": [
