--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
 		"outDir": "lib/",
 		"allowJs": true,
 		"declaration": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"strict": true
 	},
 	"include": ["src"],
 	"exclude": ["**/*.spec.ts"]
