--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
 	},
 	"dependencies": {
 		"@inquirer/prompts": "^7.0.0",
-		"commander": "^12.1.0"
+		"commander": "^12.1.0",
+		"glob": "^11.0.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.12.0",
-		"@tsconfig/recommended": "^1.0.7",
 		"@types/eslint__js": "^8.42.3",
 		"@types/jest": "^29.5.13",
 		"eslint": "^9.12.0",
