--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
-	"extends": "@tsconfig/recommended/tsconfig.json",
 	"compilerOptions": {
 		"outDir": "lib/",
 		"allowJs": true,
 		"declaration": true,
 		"resolveJsonModule": true,
-		"strict": true
+		"target": "es2016",
+		"module": "NodeNext",
+		"moduleResolution": "nodenext",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"skipLibCheck": true
 	},
 	"include": ["src"],
 	"exclude": ["**/*.spec.ts"]
