--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
 	"types": "lib/cli/index.d.ts",
 	"bin": "lib/cli/index.js",
 	"type": "module",
-	"files": [
-		"/lib"
-	],
+	"files": ["/lib"],
 	"scripts": {
 		"prepare": "husky || true",
 		"prepublishOnly": "tsc",
@@ -35,34 +33,28 @@
 		"url": "https://github.com/erwinheitzman/find-duplicate-strings/issues"
 	},
 	"dependencies": {
-		"@inquirer/prompts": "^7.0.0",
-		"@types/node": "^22.9.0",
-		"commander": "^12.1.0",
-		"glob": "^11.0.0"
+		"@inquirer/prompts": "^7.4.1",
+		"@types/node": "^22.14.0",
+		"commander": "^13.1.0",
+		"glob": "^11.0.1"
 	},
 	"devDependencies": {
-		"@babel/preset-typescript": "^7.26.0",
-		"@eslint/js": "^9.12.0",
+		"@biomejs/biome": "1.9.4",
+		"@eslint/js": "^9.24.0",
 		"@jest/globals": "^29.7.0",
-		"@types/eslint__js": "^8.42.3",
 		"@types/jest": "^29.5.13",
-		"eslint": "^9.12.0",
-		"eslint-config-prettier": "^9.1.0",
-		"husky": "^9.1.6",
+		"eslint": "^9.24.0",
+		"eslint-config-prettier": "^10.1.1",
+		"husky": "^9.1.7",
 		"jest": "^29.7.0",
-		"lint-staged": "^15.2.10",
-		"prettier": "^3.3.3",
-		"ts-jest": "^29.2.5",
+		"lint-staged": "^16.1.0",
+		"prettier": "^3.5.3",
+		"ts-jest": "^29.3.1",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.10.0"
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.29.1"
 	},
 	"lint-staged": {
-		"**/*.{js,ts}": [
-			"eslint --fix"
-		],
-		"**/*.{yml,json,md,ts,js}": [
-			"prettier --write"
-		]
+		"*": ["biome check --write --no-errors-on-unmatched"]
 	}
 }
