--- a/package.json
+++ b/package.json
@@ -40,21 +40,16 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@eslint/js": "^9.24.0",
-		"@jest/globals": "^29.7.0",
+		"@jest/globals": "^30.0.0-beta.3",
 		"@types/jest": "^29.5.13",
-		"eslint": "^9.24.0",
-		"eslint-config-prettier": "^10.1.1",
 		"husky": "^9.1.7",
 		"jest": "^29.7.0",
 		"lint-staged": "^16.1.0",
-		"prettier": "^3.5.3",
-		"ts-jest": "^29.3.1",
+		"ts-jest": "^29.3.4",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1"
+		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
-		"*": ["biome check --write --no-errors-on-unmatched"]
+		"*": ["biome check --write"]
 	}
 }
