--- a/package.json
+++ b/package.json
@@ -40,13 +40,9 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@jest/globals": "^30.0.0-beta.3",
-		"@types/jest": "^29.5.13",
 		"husky": "^9.1.7",
-		"jest": "^29.7.0",
 		"lint-staged": "^16.1.0",
-		"ts-jest": "^29.3.4",
-		"ts-node": "^10.9.2",
+		"tsx": "^4.19.4",
 		"typescript": "^5.8.3"
 	},
 	"lint-staged": {
