--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: ['18', '20', '22']
+        node: ['24']
     env:
       OS: ${{ matrix.os }}
       NODE: '${{ matrix.node }}'
@@ -23,5 +23,4 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - name: Run tests
-        run: npm ci
-          npm test
+        run: npm clean-install-test
