--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"scripts": {
 		"prepare": "husky || true",
 		"prepublishOnly": "tsc",
-		"test": "node --experimental-vm-modules node_modules/.bin/jest"
+		"test": "node --import=tsx --experimental-test-module-mocks --test"
 	},
 	"repository": {
 		"type": "git",
