--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,13 @@
 	},
 	"files": {
 		"ignoreUnknown": true,
-		"ignore": ["coverage", "lib", "node_modules", "src/file/mocks"],
-		"maxSize": 10000000000
+		"ignore": [
+			"coverage",
+			"lib",
+			"node_modules",
+			"src/processFile/mocks",
+			"src/output/mocks"
+		]
 	},
 	"formatter": {
 		"enabled": true,
@@ -22,9 +27,7 @@
 		"rules": {
 			"recommended": true,
 			"complexity": {
-				"useLiteralKeys": "off",
-				"noStaticOnlyClass": "off",
-				"noForEach": "off"
+				"useLiteralKeys": "off"
 			}
 		}
 	}
